# Minecraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: logger.h
include/glad/: glad.h
legacy/src/: common.hpp  main.cpp
legacy/src/physics/: collider.hpp
legacy/src/renderer/: camera.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp
legacy/src/util/: stb_image.hpp
legacy/src/world/: block.cpp  block.hpp  entity.cpp  entity.hpp  world.cpp
legacy/src/world/chunk/: chunk.cpp  voxel.cpp  voxel.hpp
legacy/src/world/generator/: chunkgenerator.cpp  chunkgenerator.hpp
resources/shaders/: simple.frag  simple.vert
src/: common.hpp  config.hpp  display.cpp  display.hpp  game.cpp  game.hpp  main.cpp  settings.hpp  threadpool.hpp  utilities.hpp
src/Rendering/: camera.cpp  camera.hpp  face.hpp  frustrum.cpp  frustrum.hpp  mesh.cpp  mesh.hpp  renderable.cpp  renderable.hpp  rendermaster.cpp  rendermaster.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  voxelmesh.hpp
src/physics/: collider.cpp  collider.hpp
src/renderer/: camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  face.cpp  face.hpp  frustrum.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  voxel.cpp  voxel.hpp
src/util/: fastnoise.cpp  filereader.cpp  filereader.hpp  glad.c
src/util/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_impl_sdl.cpp  imgui_widgets.cpp
src/world/: block.cpp  block.hpp  entity.cpp  entity.hpp  world.cpp  world.hpp
src/world/chunk/: chunk.cpp  chunk.hpp  face.hpp
src/world/generator/: chunkmanager.hpp
